--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,23 +6,19 @@
                 <!-- SNS Link -->
                 {% include sns-links.html center=true %}                
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license/">License</a>
-                    <br>
-                    Contact Email: me@zinglix.xyz
-                    <br>
-                    Theme by <a href="http://huangxuan.me">Hux</a> |
-                    <iframe
-                        style="margin-left: 2px; margin-bottom:-5px;"
-                        frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true" >
-                    </iframe>
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license/">License</a> | Email: me@zinglix.xyz
+
                     <br>
                     <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
+                                        <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"><img src="/img/beian.png" />
+                                            沪公网安备 31011002004677号
+                                        </a>
                     
-                    <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"
-                        ><img src="/img/beian.png" />
-                        沪公网安备 31011002004677号
-                    </a>
+                    <br>
+                    Theme by <a href="http://huangxuan.me">Hux</a> |
+                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px"
+                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
+                    </iframe>
                         
                 </p>
             </div>
