--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,32 +4,34 @@
     <meta name="google-site-verification" content="fgb5ErG0v88HE1O1cnghOjnrgBtHepdy4iPOJ1x8WdI" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="description" content="{{ site.description }}">
-    <meta name="keywords"  content="{{ site.keyword }}">
+    <meta name="keywords" content="{{ site.keyword }}">
     <META name="title" CONTENT="ZingLix Blog">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
 
-	    <!-- Open Graph -->
-        <meta property="og:title" content="{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}">
-        {% case page.layout %}
-        {% when 'post' %}
-        <meta property="og:type" content="article">
-        <meta property="og:description" content="{{ page.subtitle }}">
-        {% if page.date %}
-        <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%dT%H:%M:%SZ" }}">
-        {% endif %}
-        {% if page.author %}
-        <meta property="article:author" content="{{ page.author }}">
-        {% endif %}
-        {% for tag in page.tags %}
-        <meta property="article:tag" content="{{ tag }}">
-        {% endfor %}
-        {% else %}
-        <meta property="og:type" content="website">
-        <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-        {% endcase %}
-        <meta property="og:image" content="{{ site.url }}/icon.png">
-        <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-        <meta property="og:site_name" content="{{ site.SEOTitle }}">
+    <!-- Open Graph -->
+    <meta property="og:title"
+        content="{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}">
+    {% case page.layout %}
+    {% when 'post' %}
+    <meta property="og:type" content="article">
+    <meta property="og:description" content="{{ page.subtitle }}">
+    {% if page.date %}
+    <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%dT%H:%M:%SZ" }}">
+    {% endif %}
+    {% if page.author %}
+    <meta property="article:author" content="{{ page.author }}">
+    {% endif %}
+    {% for tag in page.tags %}
+    <meta property="article:tag" content="{{ tag }}">
+    {% endfor %}
+    {% else %}
+    <meta property="og:type" content="website">
+    <meta property="og:description"
+        content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    {% endcase %}
+    <meta property="og:image" content="{{ site.url }}/icon.png">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+    <meta property="og:site_name" content="{{ site.SEOTitle }}">
 
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}ZingLix 空间{% endif %}</title>
 
@@ -48,9 +50,11 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}">
 
-
+    <script data-ad-client="ca-pub-5810024348822097" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <!-- Custom Fonts -->
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
+        type="text/css">
 
 </head>
