--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,7 +95,16 @@
     ga('send', 'pageview');
 </script>
 {% endif %}
-
+<!-- Baidu Analytics -->
+<script>
+    var _hmt = _hmt || [];
+    (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?a8bd3341a9998d43a16c2e4a638f0f82";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 
 <!-- Side Catalog -->
 {% if page.catalog %}
