--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,12 @@
     </div>
 </footer>
 
+<!-- jQuery -->
+<script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<!-- <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script> -->
+
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/hux-blog.min.js" | prepend: site.baseurl }}"></script>
 <!-- Service Worker -->
