--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,10 +16,7 @@
                         沪公网安备 31011002004677号
                     </a>
                     <br>
-                    Email:
-                    <script type="text/javascript">
-                        document.write('me' + "@" + 'zinglix.xyz')
-                    </script> | Theme by <a href="http://huangxuan.me">Hux</a>
+                    Email: me@zinglix.xyz | Theme by <a href="http://huangxuan.me">Hux</a>
                 </p>
             </div>
         </div>
