--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,14 +20,8 @@ layout: default
 
                 {{ content }}
                 {% if page.papernote != nil %}
-                <blockquote>
-                    <p>文中出现任何错误或者对于论文内容想要进行探讨，可以在网页最下方找到联系方式<a href="mailto:me@zinglix.xyz">邮件联系我</a>，共同学习进步 <img class="emoji"
-                            title=":smirk:" alt=":smirk:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f60f.png"
-                            height="20" width="20"></p>
-                    {% if page.src != nil %}
-                    <p>论文来源：<a href="{{page.srclink}}">{{page.srcquote}}</a></p>
-                    {% endif %}
-                </blockquote>
+                    {% capture tail %}{% include include/papernote_tail.md %}{% endcapture %}
+                    {{ tail | markdownify }}
                 {% endif %}
                 <hr style="visibility: hidden;">
 
