--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,48 +1,37 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="google-site-verification" content="fgb5ErG0v88HE1O1cnghOjnrgBtHepdy4iPOJ1x8WdI" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="description" content="{{ site.description }}">
-    <meta name="keywords" content="{{ site.keyword }}">
-    <META name="title" CONTENT="ZingLix Blog">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
 
+    {% seo %}
+    
     <!-- Open Graph -->
-    <meta property="og:title"
-        content="{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}">
+
     {% case page.layout %}
     {% when 'post' %}
-    <meta property="og:type" content="article">
-    <meta property="og:description" content="{{ page.subtitle }}">
-    {% if page.date %}
-    <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%dT%H:%M:%SZ" }}">
-    {% endif %}
     {% if page.author %}
     <meta property="article:author" content="{{ page.author }}">
     {% endif %}
     {% for tag in page.tags %}
+    {%- assign identifier = tag | slice: -3, 3 -%}
+    {%if identifier != "_pn" %}
     <meta property="article:tag" content="{{ tag }}">
+    {% endif %}
     {% endfor %}
+    <meta name="keywords" content="{{ page.tags | join: ', ' }}">
     {% else %}
-    <meta property="og:type" content="website">
-    <meta property="og:description"
-        content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    <meta name="keywords" content="{{ site.keyword }}">
     {% endcase %}
-    <meta property="og:image" content="{{ site.url }}/icon.png">
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-    <meta property="og:site_name" content="{{ site.SEOTitle }}">
 
-    <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}ZingLix 空间{% endif %}</title>
+    <meta property="og:image" content="{{ site.url }}/icon.png">
+
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
-
-    <!-- Canonical URL -->
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
