--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
-
-    {% seo %}
+    <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}ZingLix 空间{% endif %}</title>
+    {% seo title=false %}
     
     <!-- Open Graph -->
 
