--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
                         沪公网安备 31011002004677号
                     </a>
                     <br>
-                    Email: <a href="mailto:me@zinglix.xyz">me@zinglix.xyz</a> | Theme by <a href="http://huangxuan.me">Hux</a>
+                    Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a> | Theme by <a href="http://huangxuan.me">Hux</a>
                 </p>
             </div>
         </div>
