--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -77,4 +77,14 @@
       </a>
     </li>
     {% endif %}
+    {% if site.email %}
+    <li>
+      <a target="_blank" href="mailto:{{ site.email }}">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="far fa-envelope fa-stack-1x fa-inverse"></i>
+        </span>
+      </a>
+    </li>
+    {% endif %}
   </ul>
