--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,9 @@
                     | <a href="https://blog.zinglix.xyz{{page.url}}">Mirror</a>
 
                     <br>
-                    <a href="http://www.beian.miit.gov.cn">沪ICP备18012603号-1</a>
+                    <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
                     <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"><img
-                            src="/img/beian.png" />
-                        沪公网安备 31011002004677号
+                            src="/img/beian.png" />沪公网安备 31011002004677号
                     </a>
                     <br>
                     Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a> | Theme by <a href="http://huangxuan.me">Hux</a>
